# excel-reader

./: README.md  pyproject.toml
excel_reader/: __init__.py  core.py
