[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-reader"
version = "0.1.0"
description = "Read Excel files with sheet detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Viprasol", email = "hello@viprasol.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.urls]
Homepage = "https://viprasol.com"
Repository = "https://github.com/Viprasol-Tech/excel-reader"
Issues = "https://github.com/Viprasol-Tech/excel-reader/issues"

[tool.setuptools]
packages = ["excel_reader"]
